<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ListadoViviendasActivity">
    <item android:id="@+id/action_marcar"
        android:title="@string/action_marcar"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_orden_manual"
        android:title="@string/orden_manual"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_subir"
        android:title="@string/action_subir"
        android:orderInCategory="300"
        app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_bajar"
        android:title="@string/action_bajar"
        android:orderInCategory="400"
        app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_change"
        android:title="@string/action_change"
        android:orderInCategory="500"
        app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_eliminar"
        android:title="@string/action_eliminar"
        android:orderInCategory="600"
        app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_detalles"
        android:title="@string/action_detalles"
        android:orderInCategory="700"
        app:showAsAction="collapseActionView" />
</menu>
